[metadata]
name = ansible-navigator
version = attr: ansible_navigator.__version__
description = A text-based user interface (TUI) for the Red Hat Ansible Automation Platform
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ansible/ansible-navigator
author = Bradley A. Thornton
author_email = bthornto@redhat.com
license = Apache License, Version 2.0
license_file = LICENSE
license_files =
    licenses/LICENSE.asottile_tm_tokenize.all
    licenses/LICENSE.dark_vs.json
    licenses/LICENSE.source.json.json
    licenses/LICENSE.source.yaml.json
    licenses/LICENSE.text.html.basic.json
    licenses/LICENSE.text.html.derivative.json
    licenses/LICENSE.text.html.markdown.json
    licenses/LICENSE.text.log.json

classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    ansible-runner >=2b,<3
    jinja2 >=3,<4
    onigurumacffi >=1.1.0,<2
    pyyaml >=5.4.1,<6
    importlib-resources >=5.1.4,<6; python_version < "3.9.0"
    dataclasses >=0.8; python_version < "3.7.0"
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    ansible-navigator=ansible_navigator.cli:main

[options.packages.find]
exclude =
    tests*
    testing*
