[metadata]
name = ansible-navigator
description = A text-based user interface (TUI) for the Red Hat Ansible Automation Platform
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ansible/ansible-navigator
author = Bradley A. Thornton
author_email = bthornto@redhat.com
license = Apache License, Version 2.0
license_file = LICENSE
license_files =
    licenses/LICENSE.asottile_tm_tokenize.all
    licenses/LICENSE.dark_vs.json
    licenses/LICENSE.source.json.json
    licenses/LICENSE.source.yaml.json
    licenses/LICENSE.text.html.basic.json
    licenses/LICENSE.text.html.derivative.json
    licenses/LICENSE.text.html.markdown.json
    licenses/LICENSE.text.log.json

classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
package_dir =
  = src
packages = find:
install_requires =
    ansible-builder >=1, <2
    ansible-runner >=2, <3
    jinja2
    onigurumacffi >=1.1.0, <2
    pyyaml
    importlib-resources; python_version < "3.9.0"
    dataclasses; python_version < "3.7.0"
python_requires = >=3.6.1

[options.extras_require]
ansible =
    ansible
ansible-base =
    ansible-base
ansible-core =
    ansible-core

[options.entry_points]
console_scripts =
    ansible-navigator=ansible_navigator.cli:main

[options.packages.find]
where = src
exclude =
    tests*
    testing*
