[metadata]
name = ansible-navigator
description = A text-based user interface (TUI) for the Red Hat Ansible Automation Platform
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ansible/ansible-navigator
author = Bradley A. Thornton
author_email = bthornto@redhat.com
license = Apache License, Version 2.0
license_file = LICENSE
license_files =
    licenses/LICENSE.asottile_tm_tokenize.all
    licenses/LICENSE.dark_vs.json
    licenses/LICENSE.source.json.json
    licenses/LICENSE.source.yaml.json
    licenses/LICENSE.text.html.basic.json
    licenses/LICENSE.text.html.derivative.json
    licenses/LICENSE.text.html.markdown.json
    licenses/LICENSE.text.log.json

classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
include_package_data = True
package_dir =
  = src
packages = find:
install_requires =
    ansible-builder >=1, <2
    ansible-runner >=2, <3
    backports.zoneinfo; python_version < "3.9.0"
    importlib-resources; python_version < "3.9.0"
    jinja2
    jsonschema
    onigurumacffi >=1.1.0, <2
    pyyaml
    setuptools >= 63.1.0; python_version >= '3.11'
    tzdata
python_requires = >=3.8

[options.extras_require]
ansible =
    ansible
ansible-base =
    ansible-base
ansible-core =
    ansible-core
docs =
    myst-parser[linkify] >= 0.15.1
    setuptools-scm >= 6.0.1
    sphinx >=  4.5.0
    sphinx-ansible-theme >= 0.8.0
    sphinx-copybutton >= 0.4.0
    sphinx-notfound-page >= 0.7.1
    sphinxcontrib-apidoc >= 0.3.0
    sphinxcontrib-towncrier >= 0.2.0a0
test =
    ansible-core
    darglint
    flake8-docstrings
    libtmux
    pre-commit
    pytest-cov
    pytest-mock
    pytest-subtests
    pytest-xdist
    sphinx

    # used for TypeAlias, can be removed once Python 3.10 is required
    typing-extensions; python_version < "3.10.0"

[options.entry_points]
console_scripts =
    ansible-navigator=ansible_navigator.cli:main

[options.packages.find]
where = src
exclude =
    tests*
    testing*
